  - curl: enable https
  - soup: plugin removed
* playlist:
  - lastfm: remove defunct Last.fm support
* decoder:
  - adplug: new decoder plugin using libadplug
  - ffmpeg: drop support for pre-0.8 ffmpeg
  - flac: require libFLAC 1.2 or newer
  - flac: support FLAC files inside archives
  - opus: new decoder plugin for the Opus codec
  - vorbis: skip 16 bit quantisation, provide float samples
  - mp4ff: obsolete plugin removed
* encoder:
  - opus: new encoder plugin for the Opus codec
  - vorbis: accept floating point input samples
* output:
  - new option "tags" may be used to disable sending tags to output
  - alsa: workaround for noise after manual song change
  - ffado: remove broken plugin
  - mvp: remove obsolete plugin
* improved decoder/output error reporting
* eliminate timer wakeup on idle MPD

ver 0.17.6 (2013/10/14)
* mixer:
  - alsa: fix busy loop when USB sound device gets unplugged
* decoder:
  - modplug: fix build with Debian package 1:0.8.8.4-4
* stored playlists:
  - fix loading playlists with references to local files
  - obey filesystem_charset for URLs

ver 0.17.5 (2013/08/04)
* protocol:
  - fix "playlistadd" with URI
  - fix "move" relative to current when there is no current song
* decoder:
  - ffmpeg: support "application/flv"
  - mikmod: adapt to libmikmod 3.2
* configure.ac:
  - detect system "ar"

ver 0.17.4 (2013/04/08)
* protocol:
  - allow to omit END in ranges (START:END)
  - don't emit IDLE_PLAYER before audio format is known
* decoder:
  - ffmpeg: support float planar audio (ffmpeg 1.1)
  - ffmpeg: fix AVFrame allocation
* player:
  - implement missing "idle" events on output errors
* clock: fix build failure

ver 0.17.3 (2013/01/06)
* output:
  - osx: fix pops during playback
  - recorder: fix I/O error check
  - shout: fix memory leak in error handler
  - recorder, shout: support Ogg packets that span more than one page
* decoder:
  - ffmpeg: ignore negative time stamps
  - ffmpeg: support planar audio
* playlist: